add mkstubs